--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -137,7 +137,7 @@
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		AuthC.1.4.1 & 3.1.1.1.1.12 3.1.1.1.2.8 3.1.1.1.2.9 3.1.1.1.2.10 & Remplir incorrectement un ou plusieurs champs de saisie puis cliquer sur le bouton "Se connecter" (à effectuer avec plusieurs combinaison de champs incorrects). & Le(s) champ(s) incorrect(s) possède(nt) une bordure rouge. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.4.1.1 & 3.1.1.1.2.11 & Rentrer une adresse serveur autre qu'une adresse IP v4. & La bordure du champ "Serveur" devient rouge et une boite de dialogue avec le texte "Erreur de serveur". &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item  \textcolor{true}{Une erreur s'affiche en cas de mauvais serveur} \item \textcolor{false}{Erreur "identifiants invalides"} \item \textcolor{false}{L'erreur est affichée directement dans le pop-up}\end{itemize}\\
+		AuthC.1.4.1.1 & 3.1.1.1.2.11 & Rentrer une adresse serveur autre qu'une adresse IP v4. & La bordure du champ "Serveur" devient rouge et une boite de dialogue avec le texte "Erreur de serveur". &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté}\end{itemize}\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -307,11 +307,11 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		PicoC.1.1 & 3.1.1.5.1.1 & Après la connexion du client vers le serveur, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être 21, l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel.&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize} \\
+		PicoC.1.1 & 3.1.1.5.1.1 & Après la connexion du client vers le serveur, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être 21, l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel.&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{true}{Validé.}\end{itemize} \\
 		\hline
-		PicoC.1.2 & 3.1.1.5.1.2 3.1.1.5.1.4 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être différent de 21 (soit supérieur à 1024, soit égale à 20), l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize} \\
+		PicoC.1.2 & 3.1.1.5.1.2 3.1.1.5.1.4 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être différent de 21 (soit supérieur à 1024, soit égale à 20), l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{true}{Validé.}\end{itemize} \\
 		\hline
-		PicoC.1.3 & 3.1.1.5.1.3 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a" sur le terminal du client & Le terminal ne doit plus afficher une connexion avec une adresse IP correspondant au serveur \textbf{et} dont le port de connexion est 21. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize}\\
+		PicoC.1.3 & 3.1.1.5.1.3 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a" sur le terminal du client & Le terminal ne doit plus afficher une connexion avec une adresse IP correspondant au serveur \textbf{et} dont le port de connexion est 21. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize}\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -328,20 +328,20 @@
 		\hline
 		PecoC.1.1.a & 3.1.1.5.2.1.1.a & Débrancher la machine contenant le logiciel client du réseau, et faire une demande de connexion avec un nom de serveur FTP valide.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$:\linebreak
 -Vérifiez l'état de votre connexion Internet.\linebreak
--Vérifiez que le nom du serveur n'est pas erroné.".&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize} \\
+-Vérifiez que le nom du serveur n'est pas erroné.".&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize} \\
 		\cline{1-3}\cline{5-5}
-		PecoC.1.1.b & 3.1.1.5.2.1.1.b & Faire une demande de connexion avec un nom de serveur FTP non-valide.& .&\\
+		PecoC.1.1.b & 3.1.1.5.2.1.1.b & Faire une demande de connexion avec un nom de serveur FTP non-valide.& .&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize}\\
 		\hline
-		PecoC.1.2 & 3.1.1.5.2.1.2 & Faire une demande de connexion avec un nom de serveur FTP valide dont le nombre de connexion autorisé par le serveur est atteint.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$: le serveur est surchargé.".&\\
+		PecoC.1.2 & 3.1.1.5.2.1.2 & Faire une demande de connexion avec un nom de serveur FTP valide dont le nombre de connexion autorisé par le serveur est atteint.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$: le serveur est surchargé.".&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize}\\
 		\hline
 		PecoC.1.3  & 3.1.1.5.2.1.3 & Faire une demande de connexion avec un nom de serveur FTP valide. Le serveur doit avoir auparavant banni le client du test.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une communication avec le serveur $< nom\_du\_serveur>$:
-$< nom\_du\_serveur>$ vous a banni !".&\\
+$< nom\_du\_serveur>$ vous a banni !".&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize}\\
 		\hline
-		PecoC.2.2 & 3.1.1.5.2.2 & Faire une demande de connexion avec un nom de serveur FTP valide. Les regles du pare-feu doit être configurer pour que toutes les connexions sortant vers des ports supérieurs à 1024 ne soient pas autorisées.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$ sur le port $< numero\_du\_port\_echange>$ : Vérifiez vos règle de pare-feu.".&\\
+		PecoC.2.2 & 3.1.1.5.2.2 & Faire une demande de connexion avec un nom de serveur FTP valide. Les regles du pare-feu doit être configurer pour que toutes les connexions sortant vers des ports supérieurs à 1024 ne soient pas autorisées.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$ sur le port $< numero\_du\_port\_echange>$ : Vérifiez vos règle de pare-feu.".&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize}\\
 		\hline
-		PecoC.2.3 & 3.1.1.5.2.3 & Vérifier pour les tests de la section 3.1.1.5 que la fenêtre possede bien un bouton "Fermer" fonctionnel :  cliquer sur ce bouton doit fermer la fenêtre.& Cliquer sur le bouton "Fermer" provoque le fermeture de la fenêtre de dialogue .&\\
+		PecoC.2.3 & 3.1.1.5.2.3 & Vérifier pour les tests de la section 3.1.1.5 que la fenêtre possede bien un bouton "Fermer" fonctionnel :  cliquer sur ce bouton doit fermer la fenêtre.& Cliquer sur le bouton "Fermer" provoque le fermeture de la fenêtre de dialogue .&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize}\\
 		\hline
-		PecoC.2.4 & 3.1.1.5.2.4 & Vérifier pour les tests de la section PecoC.2.* que la fenêtre possede bien un bouton "Ré-essayer" fonctionnel :  cliquer sur ce bouton doit ré-itérer l'opération échoué.& Cliquer sur le bouton "Ré-essayer" provoque la ré-itération de l'opération échoué.&\\
+		PecoC.2.4 & 3.1.1.5.2.4 & Vérifier pour les tests de la section PecoC.2.* que la fenêtre possede bien un bouton "Ré-essayer" fonctionnel :  cliquer sur ce bouton doit ré-itérer l'opération échoué.& Cliquer sur le bouton "Ré-essayer" provoque la ré-itération de l'opération échoué.&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize}\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -356,9 +356,9 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		PecoC.1 & 3.1.1.5.3.1 & Pendant un téléchargement, couper la ligne internet de la machine cliente & Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Connexion interrompue avec le serveur $< nom\_du\_serveur>$.".&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize} \\
+		PecoC.1 & 3.1.1.5.3.1 & Pendant un téléchargement, couper la ligne internet de la machine cliente & Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Connexion interrompue avec le serveur $< nom\_du\_serveur>$.".&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize} \\
 		\hline
-		PccoC.2 & 3.1.1.5.3.2 & Idem que le test PecoC.2.3. & Idem que le test PecoC.2.3.\\
+		PccoC.2 & 3.1.1.5.3.2 & Idem que le test PecoC.2.3. & Idem que le test PecoC.2.3. & \vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.}\end{itemize}\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -373,7 +373,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		PfcoC.1 & 3.1.1.5.4.1 & Faire un upload, et faire la commande "netstat -a -p" sur le terminal du client. & Le terminal ne doit plus afficher une connexion avec une adresse IP correspondant au serveur.&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize} \\
+		PfcoC.1 & 3.1.1.5.4.1 & Faire un upload, et faire la commande "netstat -a -p" sur le terminal du client. & Le terminal ne doit plus afficher une connexion avec une adresse IP correspondant au serveur.&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non implémenté.} \end{itemize} \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -557,15 +557,15 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
 
-		PafiS.1 & 3.1.2.2.1 & Créer un compte et essayer de partager des fichiers présents à partir de la racine. & Les fichiers ne doivent pas être accessible. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize} \\
+		PafiS.1 & 3.1.2.2.1 & Créer un compte et essayer de partager des fichiers présents à partir de la racine. & Les fichiers ne doivent pas être accessible. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{non implémenté.}\end{itemize} \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		PafiS.2 & 3.1.2.2.2 & Crée 2 comptes et partager un même fichier à ses 2 comptes & Se connecter sur les 2 comptes et vérifier l'accès aux fichiers. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize}
+		PafiS.2 & 3.1.2.2.2 & Crée 2 comptes et partager un même fichier à ses 2 comptes & Se connecter sur les 2 comptes et vérifier l'accès aux fichiers. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{non implémenté.}\end{itemize}
 \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		PafiS.3 & 3.1.2.2.3 & Crée un compte lui partager un fichier et bloqué l'accès à un sous dossier & Se connecter sur le compte crée, le fichier ne doit pas être présent dans la liste des fichiers. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize}
+		PafiS.3 & 3.1.2.2.3 & Crée un compte lui partager un fichier et bloqué l'accès à un sous dossier & Se connecter sur le compte crée, le fichier ne doit pas être présent dans la liste des fichiers. &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{non implémenté.}\end{itemize}
 \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		PafiS.4 & 3.1.2.2.4 & Ouvrir un explorateur de fichier sur le serveur & Les fichiers sont visible avec l'explorateur de fichier &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize}
+		PafiS.4 & 3.1.2.2.4 & Ouvrir un explorateur de fichier sur le serveur & Les fichiers sont visible avec l'explorateur de fichier &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{false}{non implémenté.}\end{itemize}
 \\
 		\hline
 	\end{tabular}
@@ -1080,9 +1080,9 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		PicoS.1 & 3.1.2.9.1.1 & Après le démarrage du serveur, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit indiquer que le port 21 est à l'état "LISTEN" et le nom ou le PID doit correspondre à celui du logiciel serveur &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{ukwn}{Inconnu.}\end{itemize} \\
+		PicoS.1 & 3.1.2.9.1.1 & Après le démarrage du serveur, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit indiquer que le port 21 est à l'état "LISTEN" et le nom ou le PID doit correspondre à celui du logiciel serveur &\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{true}{Validé.}\end{itemize} \\
 		\hline
-		PicoS.2 & 3.1.2.9.1.1 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a -p" sur le terminal du serveur & Le terminal doit afficher une connexion avec une adresse IP correspondant au client, dont le port de connexion de l'adresse \textbf{locale} doit être différent de 21 (soit supérieur à 1024, soit égale à 20), l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel serveur.&\\
+		PicoS.2 & 3.1.2.9.1.1 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a -p" sur le terminal du serveur & Le terminal doit afficher une connexion avec une adresse IP correspondant au client, dont le port de connexion de l'adresse \textbf{locale} doit être différent de 21 (soit supérieur à 1024, soit égale à 20), l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel serveur.&\vspace*{-0.2cm} \begin{itemize}[label=$\ast$] \item \textcolor{true}{Validé.}\end{itemize}\\
 		\cline{1-2}
 		PicoS.3 & 3.1.2.9.1.3 & & &\\
 		\hline
