Correction petite faute rapport réunion n°13 - Ajout rapport réunion n°14

--- a/Rapport_reunion/Rapport_reunion_13.tex
+++ b/Rapport_reunion/Rapport_reunion_13.tex
@@ -39,7 +39,7 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 
 \item Authentification implémentée. 
 
-\item Gestion d'erreur pour l'authentification inplémentée.
+\item Gestion d'erreur pour l'authentification implémentée.
 
 \item Serveur FTP implémenté pour tester le client.
 \end{itemize}
