--- a/Rapport_reunion/Rapport_reunion_14.tex
+++ b/Rapport_reunion/Rapport_reunion_14.tex
@@ -40,9 +40,9 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 
 \item Complétion du cahier de tests de recette et rendu.
 
-\item Débuggages des fonctionnalités implémentées.
+\item Débuggage des fonctionnalités implémentées.
 
-\item Mis en place des tests JUnit.
+\item Mise en place des tests JUnit.
 
 \item Préparation de la réunion avec relecture du code.
 
@@ -57,6 +57,7 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 
 \begin{itemize}[label = $\blacktriangleright$] 
 \item Arrêter de râper les carottes dans le sens de la longueur.
+\item Tout faire pour devenir assez fort psychologiquement afin d'arriver à ne pas pleurer en épluchant des oignons.
 \end{itemize}
 
 
