--- a/Rapport_reunion/Rapport_reunion_13.tex
+++ b/Rapport_reunion/Rapport_reunion_13.tex
@@ -28,7 +28,7 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 %--------------------------Ordre du jour------------------------------%
 \subsection*{Ordre du jour}
 \begin{itemize}[label = $\blacktriangleright$]
-\item Etat d'avancement du projet.
+\item État d'avancement du projet.
 \end{itemize}
 
 %--------------------------Bilan du travail réalisé------------------------------%
@@ -49,7 +49,7 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 \subsection*{Décisions prises}
 
 \begin{itemize}[label = $\blacktriangleright$] 
-\item Abandon de l'implementation d'une interface graphique sur le serveur par manque de temps.
+\item Abandon de l'implémentation d'une interface graphique sur le serveur par manque de temps.
 
 \item Corriger le plus de bugs possibles pour fournir une démonstration viable.
 \end{itemize}
@@ -60,7 +60,7 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 \begin{itemize}[label = $\blacktriangleright$]
 \item Rédiger les tests unitaires.
 
-\item Donner les résultats des tests d'integration.
+\item Donner les résultats des tests d'intégration.
 
 \item Donner les résultats des tests de recette.
 
@@ -70,6 +70,6 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 %----------------------------------Prochaine réunion------------------------------------%
 \subsection*{Prochaine réunion : 8 Janvier 2015}
 
-\textbf{Ordre du jour} : Reunion de crise en vue de la démonstration.\\
+\textbf{Ordre du jour} : Réunion de crise en vue de la démonstration.\\
 
 \end{document}
